--- a/ValpoInterviene/Propuesta.tex
+++ b/ValpoInterviene/Propuesta.tex
@@ -68,7 +68,7 @@
   \begin{tabular}{>{\raggedleft}m{2.5cm}>{\centering}m{\dimexpr\textwidth - 5cm\relax}>{\raggedright}m{2.5cm}}
   \includegraphics[width=\linewidth]{logo}%
   &%
- \textsc{Universidad técnica federico Santa maría\\Departamento de informática} \\ [25pt] % Your university, school and/or department
+ \textsc{Universidad Técnica Federico Santa María\\Departamento de Informática} \\ [25pt] % Your university, school and/or department
   &%
   \includegraphics[width=\linewidth]{di} %
   \end{tabular}
@@ -88,14 +88,14 @@
 \item Eduardo Pozo V. 201473040-3
 \end{itemize} 
 \section{Resumen de Propuesta}
-Nuestra propuesta consiste en la implementación de un sistema web de gestion de residuos. Desde esta plataforma se podrá obtener control sobre el estado de los puntos de reciclaje. A grandes rasgos el sistema facilitará administrar los puntos de reciclaje, juntas de vecinos y gestionar los puntos que se encuentren llenos y poder ver mediante un mapa la ubicación de estos.
+Nuestra propuesta consiste en la implementación de un sistema web de gestión de residuos. Desde esta plataforma se podrá obtener control sobre el estado de los puntos de reciclaje. A grandes rasgos el sistema facilitará administrar los puntos de reciclaje, juntas de vecinos y gestionar los puntos que se encuentren llenos y poder ver mediante un mapa la ubicación de estos permitiendo su recolección de forma eficiente.
 
 \section{Contexto de Licitación}
 Antes de explicar nuestra propuesta ante el llamado a licitación de Valpo Interviene queremos establecer un contexto previo de esta organización para demostrar comprensión del caso y una buena orientación de la propuesta en sí.\\
 
-ValpoInterviene es una ONG que se preocupa por la protección del medio ambiente y la recuperación de espacios públicos de valparaíso y busca fomentar una cultura mediambiental(Reducir, Reciclar, Reutilizar) en la comunidad y empresas. Para cumplir estos objetivos ValpoInterviene ha puesto a disposición de la comunidad talleres de vermicompostaje, 13 contenedores para botellas plasticas y vinculaciónes con juntas de vecinos para fomentar la cultura de “Basura Cero” además de relacionarse con hostales prestando el servicio de retiro de residuos.\\
+ValpoInterviene es una ONG que se preocupa por la protección del medio ambiente y la recuperación de espacios públicos de Valparaíso y busca fomentar una cultura medioambiental(Reducir, Reciclar, Reutilizar) en la comunidad y empresas. Para cumplir estos objetivos ValpoInterviene ha puesto a disposición de la comunidad talleres de vermicompostaje, 13 contenedores para botellas plásticas y vinculaciones con juntas de vecinos para fomentar la cultura de “Basura Cero” además de relacionarse con hostales prestando el servicio de retiro de residuos.\\
 
-Asimismo el objetivo de recuperar espacios publicos se ha logrado mediante a voluntarios y vecinos de distintos sitios. Algunas de estas intervenciones con afan de recuperar y embellecer lugares se ha llevado a cabo en la plaza Bismark, la escalera Hector Calvo o actualmente en la escalera General Mackena.\\
+Asimismo el objetivo de recuperar espacios públicos se ha logrado mediante a voluntarios y vecinos de distintos sitios. Algunas de estas intervenciones con afán de recuperar y embellecer lugares se ha llevado a cabo en la plaza Bismark, la escalera Hector Calvo o actualmente en la escalera General Mackena.\\
 
 Al ser una ONG no posee competidores y no tiene un mercado que intervenir por tanto no debe ser competitivo en sus procesos, dado que todo lo que hace la ONG es trabajar a favor de la comunidad y fomentar buenas practicas ambientales.\\
 
@@ -104,10 +104,10 @@ ValpoInterviene tiene un grupo de partners u organismos asociados, estos son:
 \item \textbf{Áncora}:Espacio abierto a la comunidad para desarrollo de proyectos y como punto de encuentro social de coworking.
 \item \textbf{M25 Arquitectos}:Arquitectos que participan y apoyan los proyectos de ValpoInterviene.
 \item \textbf{Patio Volantín}:Lugar de vinculación con el Cerro Panteón y sitio de intercambio material e inmaterial(Trueque por servicio).
-\item \textbf{Sembrando Comunidad} :Una iniciativa de Patio Volantín que buscaba crear huertos, jardines y bosques comestibles en la cuenca san juan de dios de forma sostenible y sustentable.
+\item \textbf{Sembrando Comunidad} :Una iniciativa de Patio Volantín que buscaba crear huertos, jardines y bosques comestibles en la cuenca San Juan de Dios de forma sostenible y sustentable.
 \end{itemize}
 Volveremos a mencionar a los colaboradores en el Modelo Canvas.\\
-A continuación desarrollamos el Modelo de negocios tipo canvas junto con la cadena de valor de esta ONG.
+A continuación desarrollamos el Modelo de negocios tipo Canvas junto con la cadena de valor de esta ONG.
 
 \section*{Modelo Canvas de Valpointerviene}
 \begin{itemize}
@@ -147,45 +147,48 @@ A continuación desarrollamos el Modelo de negocios tipo canvas junto con la cad
 \end{itemize}
 \item Colaboradores
 \begin{itemize}
-\item Usuarios desinteresados que gustan de ayudar con la mision de ValpoInterviene
+\item Usuarios desinteresados que gustan de ayudar con la misión de ValpoInterviene
 \item Suministran material reciclable.
 \item Ayudan a la difusión de las publicaciones de ValpoInterviene.
 \end{itemize}
 \item Costos
 \begin{itemize}
-\item Gestion de  ValpoInterviene, junto con los recursos para concretar las propuestas, y el tiempo de los colaboradores y voluntarios ligados a la organización.
+\item Gestión de  ValpoInterviene, junto con los recursos para concretar las propuestas, y el tiempo de los colaboradores y voluntarios ligados a la organización.
 \end{itemize}
 \end{itemize} 
-\section*{Cadena de Valor}
-\subsection*{Actividades Primarias}
-\begin{itemize}
-\item Recolección de residuos.
-\item Renovación y limpieza de espacios públicos.
-\item Insentivar el cuidado al medio ambiente por redes sociales.
-\item Talleres instructivos.
-\item Econegocios (destinado a hostales)
-\end{itemize}
+\section*{Cadena de Valor orientada a ONG's}
+Esta cadena de valor orientada a organizaciones sin fines de lucro, comprende elementos que son necesarios para cumplir con la misión de la organización y poder entregar un servicio a la comunidad de forma eficiente y durable.
 \subsection*{Actividades de Soporte}
 \begin{itemize}
-\item Informar por su pagina web o redes sociales las actividades y fines de Valpointerviene.
-\item Inscripción de voluntarios.
-\item Juntas de vecinos informativas.
-\item Reporte del estado de los depositos.
+\item \textbf{Infraestructura interna}: Coordinadores y Miembros de ValpoInterviene.
+\item \textbf{Manejo de Recursos Humanos}:Juntas de vecinos informativas y reuniones periódicas con los colaboradores.
+\item \textbf{Desarrollo de Propuestas}: Dentro de las reuniones y Redes Sociales se lleva a cabo el desarrollo de nuevas propuestas.
+\item \textbf{Abastecimiento}: Compras necesarias para la sostenibilidad de la organización.
+\end{itemize}
+\subsection*{Actividades Primarias}
+\begin{itemize}
+\item \textbf{Logística de recursos entrantes}:Recolección de residuos, vinculo con empresas de recolección y juntas de vecinos. 
+\item \textbf{Operación de la organización}: Renovación de espacios y capacitaciones.
+\item \textbf{Entrega de servicio}: El servicio a la comunidad es bidireccional de forma local, dado que tanto las personas como la organización acuden al lugar a concretar una actividad.
+\item \textbf{Obtención de fondos}: Eco-negocios (destinado a hostales) y vínculos con empresas de compra de material reciclable.
+\item \textbf{Mantención de soporte}: Inscripción de voluntarios, informar por su pagina web o redes sociales las actividades y fines de Valpointerviene junto con incentivar el cuidado al medio ambiente.
 \end{itemize}
 
 Según los Modelos, Valpointerviene es una ONG encargada únicamente en recolección de residuos, renovación de espacios públicos y capacitación de la comunidad. Cumple un rol de proveedor para empresas encargadas en reciclar dichos residuos.\\
 
-El defecto está en el sistema de soporte de los depositos, que de momento es ineficaz debido a la tardanza y falta de información del estado de los depositos. Para este problema, PAC Solutions propone un Sistema de Información capaz resolver estos problemas.
+El defecto está en el sistema de soporte de los depositos, que de momento es ineficaz debido a la tardanza y falta de información del estado de los depósitos. Para este problema, PAC Solutions propone un Sistema de Información capaz resolver estos problemas.
 \section{Nuestra Propuesta}
-Nuestra propuesta comprende la implementación de un sistema de gestión de residuos domiciliarios y de empresas para ValpoInterviene. Este sistema de información sería implementado mediante una plataforma web, a la cual pueden acceder tanto miembros de la organización como colaboradores(juntas de vecinos y empresas de recoleccion) y usuarios. Las funcionalidades de la plataforma serán las siguientes:
+Nuestra propuesta comprende la implementación de un sistema de gestión de residuos domiciliarios y de empresas para ValpoInterviene. Este sistema de información sería implementado mediante una plataforma web, a la cual pueden acceder tanto miembros de la organización como colaboradores(juntas de vecinos y empresas de recolección) y usuarios. Las funcionalidades de la plataforma serán las siguientes:
 \begin{itemize}
 \item Para miembros de la organización, el control sobre la existencia(creación o eliminación) de los puntos de reciclaje. Capacidad de añadir nuevas juntas de vecinos y asignarles un punto de recolección.
-\item Para los colaboradores, la alternativa de ver cuales son los puntos de recolección que se encuentran llenos, y que tipo de material acumulan. Además una vista georeferenciada respecto a los puntos de recoleccion llenos agrupandolos para poder encontrar una via eficiente de recolección.
-\item Para todos los usuarios que visiten la plataforma estará disponible la opcion de ver un mapa con las organizaciones que reciclan, los puntos de recolección, poder organizar que tipo de material quieren reciclar y tener la capacidad de dar viar una solicitud como junta de vecinos para poder coordinarse con ValpoInterviene y tener un punto limpio local. Y la alternativa de poner a disposición un centro de reciclaje particular (casa de una persona o junta de vecinos) mediante un formulario. 
+\item Para los colaboradores, la alternativa de ver cuales son los puntos de recolección que se encuentran llenos, y que tipo de material acumulan. Además una vista geo-referenciada respecto a los puntos limpios llenos agrupándolos para poder encontrar una vía eficiente de recolección.
+\item Para todos los usuarios que visiten la plataforma estará disponible la opción de ver un mapa con las organizaciones que reciclan, los puntos de recolección, poder organizar que tipo de material quieren reciclar y tener la capacidad de enviar una solicitud como junta de vecinos para poder coordinarse con ValpoInterviene y tener un punto limpio local. Y la alternativa de poner a disposición un centro de reciclaje particular (casa de una persona o junta de vecinos) mediante un formulario. 
 \end{itemize}
 
-La plataforma que planteamos se basa en la colaboración ciudadana para poder hacer un sistema viable, confiable y durable en el tiempo. [ValpoIntaviso] oportuno sobre la desaparición de algun punto de recoleccion asimismo como si está lleno para facilitar su pronto vaciado.\\
-Tambien en el sector de usuarios estará la opcion de [enerviene] debe tener interacciones administrativas para gestionar el inventario de puntos limpios, centros informales y juntas de vecinos. Mientras que los colaboradores y empresas encargadas de recoger los contenedores podrán informarse del estado de estos en tiempo real (en base al apoyo ciudadano).\\
+La plataforma que planteamos se basa en la colaboración ciudadana para poder hacer un sistema viable, confiable y durable en el tiempo. ValpoInterviene debe tener interacciones administrativas para gestionar
+el inventario de puntos limpios, centros informales y juntas de vecinos. Mientras que los colaboradores y
+empresas encargadas de recoger los contenedores podrán informarse del estado de estos en tiempo real
+(en base al apoyo ciudadano), Y los usuarios respectivamente podran dar aviso del llenado de un deposito para su pronto vaciado.\\
 
 
 
@@ -194,7 +197,7 @@ Tambien en el sector de usuarios estará la opcion de [enerviene] debe tener int
 
 \subsubsection*{Estado Actual de la organización}
 Actualmente según nuestro punto de vista ValpoInterviene posee una pagina web informativa acerca de la organización misma, con información de las actividades realizadas y descripciones de sus actividades principales, junto con sus principios, misión y visión.
-Tiene una fuerte interacción en redes sociales en un grado más menos parecido en Facebook y Twitter, y dejando de lado por cierta parte YouTube.
+Tiene una fuerte interacción en redes sociales en un grado más menos parecido en Facebook y Twitter, y dejando de lado por cierta parte YouTube que quiźas no tiene mayor impacto que las redes anteriormente mencionadas. Los sitios donde detallan a sus colaboradores están vacíos, y vemos de forma general que su página web no es el medio principal de interacción con sus colaboradores.
 
 %----------------------------------------------------------------------------------------
 %	PROBLEM 2
